<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:background="@drawable/scrollbar_background"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="800dp"
            android:layout_height="180dp">

            <ImageButton
                android:id="@+id/check"
                style="?android:attr/borderlessButtonStyle"
                android:layout_column="0"
                android:contentDescription="@string/check"
                android:src="@drawable/toggle_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/zero"
                style="?android:attr/borderlessButtonStyle"
                android:layout_column="2"
                android:text="@string/_0"
                android:textColor="#ffffff"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="#0d000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/one"
                style="?android:attr/borderlessButtonStyle"
                android:layout_column="4"
                android:text="@string/_1"
                android:textColor="#ffffff"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="#0d000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:id="@+id/back"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="42sp"
                android:layout_width="wrap_content"
                android:layout_column="6"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/back"
                android:src="@drawable/back"
                />

            <Button
                android:text="@string/_2"
                android:id="@+id/two"
                android:layout_column="7"
                android:textSize="42sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                style="?android:attr/borderlessButtonStyle"
                android:background="#0d000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:text="@string/_3"
                android:id="@+id/three"
                android:layout_column="9"
                android:textSize="42sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                style="?android:attr/borderlessButtonStyle"
                android:background="#0d000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:text="@string/_4"
                android:id="@+id/four"
                android:layout_column="11"
                android:textSize="42sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                style="?android:attr/borderlessButtonStyle"
                android:background="#0d000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:id="@+id/togglecash"
                style="?android:attr/borderlessButtonStyle"
                android:layout_column="12"
                android:layout_width="170dp"
                android:layout_height="180dp"
                android:contentDescription="@string/toglecash"
                android:scaleType="centerCrop"
                android:onClick="toggleCash"
                android:src="@drawable/cash_num_toggle" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-60dp">

            <Button
                android:id="@+id/five"
                style="?android:attr/borderlessButtonStyle"
                android:layout_column="1"
                android:text="@string/_5"
                android:textColor="#ffffff"
                android:textSize="42sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:background="#0d000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/six"
                style="?android:attr/borderlessButtonStyle"
                android:layout_column="3"
                android:text="@string/_6"
                android:textColor="#ffffff"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="#0d000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/seven"
                style="?android:attr/borderlessButtonStyle"
                android:layout_column="5"
                android:text="@string/_7"
                android:textColor="#ffffff"
                android:textSize="42sp"
                android:textStyle="bold"
                android:background="#0d000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:text="@string/_8"
                android:id="@+id/eight"
                android:layout_column="8"
                android:textSize="42sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                style="?android:attr/borderlessButtonStyle"
                android:background="#0d000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:text="@string/_9"
                android:id="@+id/nine"
                android:layout_column="10"
                android:textSize="42sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                style="?android:attr/borderlessButtonStyle"
                android:background="#0d000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </TableRow>
    </TableLayout>
</LinearLayout>