<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scrollbar_background"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/check"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:contentDescription="@string/check"
            android:src="@drawable/toggle_cash" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.6"
            android:background="#e2e2"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="#e3e3e3"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/zero"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="#ffffff"
                    android:textSize="42sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/one"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:text="@string/_1"
                    android:textColor="#ffffff"
                    android:textSize="42sp"
                    android:textStyle="bold" />

                <Button
                    android:text="@string/_2"
                    android:id="@+id/two"
                    android:layout_column="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="42sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    style="?android:attr/borderlessButtonStyle" />

                <Button
                    android:text="@string/_3"
                    android:id="@+id/three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="9"
                    android:textSize="42sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    style="?android:attr/borderlessButtonStyle" />

                <Button
                    android:text="@string/_4"
                    android:id="@+id/four"
                    android:layout_column="11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="42sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    style="?android:attr/borderlessButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="#e4e4"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/five"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/_5"
                    android:textColor="#ffffff"
                    android:textSize="42sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/six"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:text="@string/_6"
                    android:textColor="#ffffff"
                    android:textSize="42sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/seven"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:text="@string/_7"
                    android:textColor="#ffffff"
                    android:textSize="42sp"
                    android:textStyle="bold" />

                <Button
                    android:text="@string/_8"
                    android:id="@+id/eight"
                    android:layout_column="8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="42sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    style="?android:attr/borderlessButtonStyle" />

                <Button
                    android:text="@string/_9"
                    android:id="@+id/nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="10"
                    android:textSize="42sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    style="?android:attr/borderlessButtonStyle" />

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/togglecash"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.8"
            android:contentDescription="@string/toglecash"
            android:onClick="toggleCash"
            android:scaleType="fitXY"
            android:src="@drawable/cash_num_toggle_kes" />

                    <ImageButton
                        android:id="@+id/back_old"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_height="42sp"
                        android:layout_column="6"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@string/back"
                        android:src="@drawable/back" />

    </LinearLayout>


<!--    <TableLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:shrinkColumns="*"-->
<!--        android:stretchColumns="*">-->

<!--        <TableRow-->
<!--            android:layout_width="0sp"-->
<!--            android:layout_height="match_parent">-->

<!--            <ImageButton-->
<!--                android:id="@+id/check_old"-->
<!--                style="?android:attr/borderlessButtonStyle"-->
<!--                android:layout_column="0"-->
<!--                android:contentDescription="@string/check"-->
<!--                android:src="@drawable/toggle_cash"-->
<!--                android:visibility="invisible"/>-->

<!--            -->

<!--            <ImageButton-->
<!--                android:id="@+id/back_old"-->
<!--                style="?android:attr/borderlessButtonStyle"-->
<!--                android:layout_height="42sp"-->
<!--                android:layout_column="6"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:contentDescription="@string/back"-->
<!--                android:src="@drawable/back" />-->

<!--            -->

<!--            <ImageButton-->
<!--                android:id="@+id/togglecash_old"-->
<!--                style="?android:attr/borderlessButtonStyle"-->
<!--                android:layout_column="12"-->
<!--                android:layout_width="170dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:contentDescription="@string/toglecash"-->
<!--                android:scaleType="centerCrop"-->
<!--                android:onClick="toggleCash"-->
<!--                android:src="@drawable/cash_num_toggle_kes"-->
<!--                android:visibility="invisible"/>-->

<!--        </TableRow>-->

<!--        <TableRow-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginTop="-70sp">-->

<!--            -->



<!--        </TableRow>-->
<!--    </TableLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>
